fixed text alignment

--- a/src/Stats-Anime/Components/Navbar/header-style.css
+++ b/src/Stats-Anime/Components/Navbar/header-style.css
@@ -319,6 +319,7 @@
   font-weight: lighter;
   color: white;
   transform: translateY(2em);
+  text-align: center;
 }
 .navlink {
   text-decoration: none;
